# WisLLM

./: .env  .gitignore  LICENSE  README.md  langgraph.json  main.py  model_quantizer.py  pyproject.toml  test_vllm.py
agents/supervisor/supervisor_agent/: graph.py  prompts.py
inferancing/: langgraph.json  pyproject.toml  test_vllm.py
inferancing/agents/scrum_master/: graph.py  nodes.py
inferancing/shared/state/: store.py
inferencing/: pyproject.toml
inferencing/agents/: base_agent.py
inferencing/agents/scrum_master/: graph.py  prompts.py  test_gemini.py  test_graph.py  test_node.py  test_state.py
infrastructure/docker/: Dockerfile  compose.yml
infrastructure/kubernetes/: wisllm-chart.yml
modeling/: README.md  awq_quantizer.ipynb  main.py  model_quantizer.py  pyproject.toml
shared/agents/: base_agent.py
shared/comms/: handoffs.py
src/: main.py
src/agents/scrum_master/: nodes.py
src/scrum/: main.py
src/shared/comms/: handoffs.py
src/shared/state/: schemas.py  store.py
