[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wisllm"
version = "0.0.1"
description = "LLM Agentic Development Team, designed to support business-as-code platforms, services, and data."
authors = [
    {name = "jestyr27", email = "joe@uhstray.io"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langgraph>=0.4.8",
    "langgraph-cli[inmem]>=0.3.3",
    "python-dotenv>=1.1.0",
    "vllm>=0.9.1",
]

[tool.hatch.build.targets.wheel]
packages = ["wisllm"]
