

[project]
name = "wisllm"
version = "0.0.1"
description = "LLM Agentic Development Team, designed to support business-as-code platforms, services, and data."
authors = [
    { name = "jestyr27", email = "joe.wisneski@uhstray.io" },
    { name = "JacobHaig", email = "jacob.haig@uhstray.io" },
]
license = { text = "Apache-2.0" }
readme = "README.md"

# Python related metadata
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "langchain-anthropic>=0.3.17",
    "langchain-community>=0.3.27",
    "langchain-tavily>=0.2.6",
    "langchain-text-splitters>=0.3.8",
    "langchain[anthropic]>=0.3.26",
    "langgraph>=0.5.1",
    "langgraph-cli[inmem]>=0.3.3",
    "langgraph-supervisor>=0.0.27",
    "langsmith>=0.4.4",
    "python-dotenv>=1.1.1",
    "vllm>=0.9.1",
]


[tool.ruff]
# Allow lines to be as long as 120.
line-length = 180
