[project]
name = "wisai_modeling"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "llmcompressor>=0.6.0",
    "pydantic>=2.11.7",
    "vllm>=0.6.3",
    "zstandard>=0.23.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.4",
    "pydantic>=2.11.7",
    "uv>=0.7.19",
]
